--- a/index.html
+++ b/index.html
@@ -19,40 +19,35 @@
 	
 	
 	<body>
-		<div class="leftside">
-			<img src="imgs a ment/Broco Bite.jpg" alt="">
-			<img src="imgs a ment/Chicken-Bites.jpg" alt="">
-			<img src="imgs a ment/Mac and Cheese Bites.jpg" alt="">
-			<img src="imgs a ment/BAC toppa.png" alt="">
-			<img src="imgs a ment/CCB toppa.jpg" alt="">
-			<img src="imgs a ment/Las toppa.jpg" alt="">
-			<img src="imgs a ment/QP patty.png" alt="">
-			<img src="imgs a ment/SSC patty.png" alt="">
-	
-	
-	
-		</div>
+		
 		<div class="rightside">
+			
+			<img src="imgs a ment/Broco Bite.jpg" alt="" style="height: 400px; width: 300px;">
+			<img src="imgs a ment/Chicken-Bites.jpg" alt="" style="height: 400px; width: 300px;">
+			<img src="imgs a ment/Mac and Cheese Bites.jpg" alt="" style="height: 400px; width: 300px;">
 			<p>
 				these are our line of new bites now available in stores near you 
 				wherehouse, countdown , pak n save 
 				we have broccoli bites ,chicken bites, mac and cheese bites.
-
-
-
-
+			</p>
+			<br>
+			<img src="imgs a ment/BAC toppa.png" alt="" style="height: 400px; width: 300px;">
+			<img src="imgs a ment/CCB toppa.jpg" alt="" style="height: 400px; width: 300px;">
+			<img src="imgs a ment/Las toppa.jpg" alt="" style="height: 400px; width: 300px;">
+			<p>
 				these are our new line of toppas now available in stores near you 
 				wherehouse, countdown , pak n save 
 				we have Bacon and cheese ,lasagne , Chicken Cordon Bleu toppas.
-
-
-
-
-
+	
+			</p>
+			<br>
+			<img src="imgs a ment/QP patty.png" alt="" style="height: 400px; width: 300px;">
+			<img src="imgs a ment/SSC patty.png" alt="" style="height: 400px; width: 300px;">
+	
+			<p>
 				these are our new line of pattysnow available in stores near you 
 				wherehouse, countdown , pak n save 
 				we have quarter pounder patty,Southern Style Chicken patty.
-	
 			</p>
 		</div>
 	
