--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
 			</p>
 		</div>
 	
+		<footer>
+			<p>
+				Telephone number: 0211212424
+			</p>
+			<p>
+				Email address:TheFlavourFrenzy@gmail.com
+			</p>
+			<p>
+				Physical address: 180-182 Broadway, Newmarket, Auckland 1023, New Zealand
+			</p>
+		</footer>
 	
 	</body>
 	
